Nginx and Postgres

--- a/1/Dockerfile
+++ b/1/Dockerfile
@@ -1,19 +1,14 @@
 FROM ubuntu:16.04
 
-MAINTAINER Mikhail Bakulin <bakulin_m@tass.ru>
+ENV DEBIAN_FRONTEND 'noninteractive'
 
-ENV TZ 'Europe/Moscow'
-RUN apt-get update -y
+#Install Nginx
+RUN apt-get update -yq \
+    && apt-get install -yq nginx
 
-# Install Nginx
-RUN apt-get install -y curl && \
-    curl -O "http://nginx.org/keys/nginx_signing.key"
-RUN rpm --import nginx_signing.key
-RUN apt-get install -y nginx
-
-CMD ["nginx"]
-
-RUN usermod -u 1000 www-data
+COPY files /
 
 EXPOSE 80
 EXPOSE 443
+
+CMD ["nginx", "-g", "daemon off;"]
