--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,21 @@
 .idea
+.bowerrc
+.gitignore
+LICENSE.md
+README.md
+assets/
+codeception.yml
+commands/
+composer.json
+composer.lock
+config/
+controllers/
+mail/
+models/
+requirements.php
+runtime/
+tests/
+views/
+web/
+yii
+yii.bat
