--- a/2/Dockerfile
+++ b/2/Dockerfile
@@ -1,5 +1,7 @@
 FROM ubuntu:16.04
 
+ARG DEBIAN_FRONTEND=noninteractive
+
 ENV LANG ru_RU.UTF-8
 ENV PG_VERSION 9.6
 ENV POSTGRES_DB yiiconf
@@ -15,7 +17,7 @@ RUN echo 'Europe/Moscow' | tee /etc/timezone
 
 RUN apt-get update \
     && apt-get install -yq software-properties-common python-software-properties wget \
-    && add-apt-repository "deb http://apt.postgresql.org/pub/repos/apt/ xenial-pgdg main" \
+    && add-apt-repository -y "deb http://apt.postgresql.org/pub/repos/apt/ xenial-pgdg main" \
     && wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add - \
     && apt-get update \
     && apt-get install -yq locales \
@@ -31,16 +33,19 @@ RUN apt-get update \
 # ADD entrypoint.sh /usr/local/bin/
 COPY entrypoint.sh /usr/local/bin/
 
+# Права для юзера postgres
 RUN rm -rf "$PG_BASE" && mkdir -p "$PG_BASE" && chown -R postgres:postgres "$PG_BASE" \
       && mkdir -p /var/run/postgresql/$PG_VERSION-main.pg_stat_tmp \
       && chown -R postgres:postgres /var/run/postgresql && chmod g+s /var/run/postgresql \
       && chmod +x /usr/local/bin/entrypoint.sh
 
+# Доступ с хост машины
 RUN echo "host all  all    0.0.0.0/0  md5" >> $PG_CONFIG_DIR/pg_hba.conf \
   && echo "host all  all    ::/0  md5" >> $PG_CONFIG_DIR/pg_hba.conf \
   && echo "listen_addresses='*'" >> $PG_CONFIG_FILE
 
-# No sudo in base images! Look at alternative https://github.com/tianon/gosu
+# В базовых образах нет sudo!
+# Альтернатива специально для использования в контейнерах - https://github.com/tianon/gosu
 USER postgres
 
 VOLUME ["${PG_BASE}"]
