--- a/4/advanced/docker/nginx/Dockerfile
+++ b/4/advanced/docker/nginx/Dockerfile
@@ -1,5 +1,7 @@
 FROM ubuntu:16.04
 
+ARG DEBIAN_FRONTEND=noninteractive
+
 RUN apt-get update \
    && apt-get install -yq nginx
 
@@ -8,4 +10,4 @@ COPY files /
 EXPOSE 80
 EXPOSE 443
 
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["nginx"]
